[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "eltdx"
version = "0.1.0"
description = "Python client for Tongdaxin market data protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [{name = "ax"}]
keywords = [
  "tongdaxin",
  "tdx",
  "market-data",
  "finance",
  "stocks",
  "a-share",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eltdx"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require live TDX servers",
]
testpaths = ["tests"]
